fixed values algorithm. investigating screen top issue on ios devices

--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -46,7 +46,7 @@
     }
   
     body{
-      margin: 0;
+      // margin: 0;
       overscroll-behavior: none;
     }
   
