--- a/src/styles/sass/values.scss
+++ b/src/styles/sass/values.scss
@@ -27,11 +27,13 @@
             box-sizing: border-box;
             @include box(flex, column, center, center);
             width:500px;
+            transition:width .4s;
             #value-text{
-                transition: opacity .2s;
+                transition: opacity .2s, bottom .2s;
                 margin: 0;
                 width:500px;
                 min-width:500px;
+                position: relative;
             }
         }
         
